solution mobile title width fix

--- a/wp-content/themes/sixgill/less/mobile_portrait_landscape_solutions.less
+++ b/wp-content/themes/sixgill/less/mobile_portrait_landscape_solutions.less
@@ -107,6 +107,7 @@
 			text-align: left;
 			padding-top: 30px;
 			margin-bottom: 25px;
+			max-width: 50vw;
 		}
 
 		&-block {
@@ -151,7 +152,7 @@
 				font-weight: 300;
 				line-height: 1.67;
 				letter-spacing: 2.9px;
-				max-width: 80vw;
+				max-width: 50vw;
 			}
 
 			&-paragraph p {
